change spacing to  px, fix all spacing index + menu

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -33,13 +33,13 @@ $font-weight-m: 500;
 $font-weight-l: 700;
 
 // Spacing
-$spacing-xs: 0.25rem;
-$spacing-s: 0.5rem;
-$spacing-m: 1rem;
-$spacing-l: 1.5rem;
-$spacing-xl: 2rem;
-$spacing-xxl: 2.5rem;
-$spacing-section: 3.5rem;
+$spacing-xs: 5px;
+$spacing-s: 10px;
+$spacing-m: 15px;
+$spacing-l: 20px;
+$spacing-xl: 25px;
+$spacing-xxl: 30px;
+$spacing-section: 50px;
 
 // Border Radius
 $border-radius-small: 15px;
