--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,13 +1,9 @@
 @use "../abstracts/variables";
 @use "../abstracts/mixins";
 
-header {
-  height: 126px;
-}
-
 .header-logo {
   width: 100%;
-  height: 50%;
+  height: 63px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,7 +18,7 @@ header {
 .header-location {
   position: relative;
   z-index: 1;
-  height: 50%;
+  height: 50px;
   width: 100%;
   display: flex;
   justify-content: center;
